<resources>
    <string name="app_name">RealTime Messenger</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="forgot_password">Forgot password</string>
    <string name="login_now">Login Now</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset password</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="reset_link_sent">The reset link has been successfully sent</string>
    <string name="type_your_message">Type your message:</string>
</resources>