<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle_808"
    tools:context=".view.ResetPasswordActivity">

<TextView
    android:id="@+id/textViewAppName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:fontFamily="@font/poppins_thin"
    android:text="@string/forgot_password"
    android:textAlignment="center"
    android:textColor="@color/white"
    android:textSize="36sp"

    app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout_editor_absoluteX="190dp" />

<EditText
    android:id="@+id/editTextTextEmailAddress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginStart="36dp"
    android:layout_marginEnd="36dp"
    android:layout_marginBottom="36dp"

    android:background="@drawable/rectangle_3"

    android:hint="@string/email"
    android:inputType="textEmailAddress"

    android:paddingStart="48dp"
    android:textColor="@color/white"
    android:textColorHint="#80FFFFFF"

    app:layout_constraintBottom_toTopOf="@+id/buttonResetPassword" />



<Button
    android:id="@+id/buttonResetPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginStart="36dp"
    android:layout_marginEnd="36dp"


    android:background="@drawable/gradient_blue"
    android:fontFamily="@font/poppins_medium"

    android:gravity="center_horizontal|center_vertical"
    android:paddingTop="10dp"
    android:paddingBottom="6dp"
    android:text="@string/reset_password"
    android:textAllCaps="false"
    android:textColor="@color/white"
    android:textSize="18sp"

    app:layout_constraintBottom_toTopOf="@+id/linearLayoutButtons" />


<LinearLayout
    android:id="@+id/linearLayoutButtons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="48dp"
    android:layout_marginStart="36dp"
    android:layout_marginEnd="36dp"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent">

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:text="@string/register"
        android:paddingEnd="28dp"
        android:visibility="gone"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp" />
</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>